--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">With TinDog, we are hoping for a better future to this beautiful creature.</h2>
-          <img class="testimonial-image" src="C:\Users\Wadie\Desktop\WebDev\Angela Yu\Web development\HTML - Personal Site\269620360_10220099025576885_1618873716515328034_n.jpg" alt="CEO-profile">
+          <img class="testimonial-image" src="images/269620360_10220099025576885_1618873716515328034_n.jpg" alt="CEO-profile">
           <em>Youssef, Jouili</em>
         </div>
       </div>
